# multi-agent-research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  example.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
agents/: analyst.py  planner.py  researcher.py  writer.py
config/: settings.py
core/: orchestrator.py  session.py
monitoring/: tracker.py
tests/: test_analyst.py  test_cache.py  test_orchestrator.py  test_planner.py  test_researcher.py  test_writer.py
tools/: cache.py  web_search.py
